[package]
name = "making_dbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.0"
rusqlite = "0.29.0"
quick-xml="0.23.0"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
pyo3 = { version = "0.14.0", features = ["extension-module"] }
rdkit-ffi = "0.1.0+rdkit-2022-09-1-pre"
cxx = "1.0.94"
rayon="1.7.0"
crossbeam-channel = "0.5.8"


