[package]
name = "making_dbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.4"
quick-xml = "0.28.2"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rayon = "1.7.0"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
rusqlite = "0.29.0"
deno_core = "0.191.0"  # Check for the latest version
base64 = "0.21.0" # Check for the latest version
indicatif = "0.17.6" # Check for the latest version



[package.metadata.tauri.bundle]
links = ["sqlite3.lib"]


