[package]
name = "Met-ID"
version = "0.0.4"
description = "A Tauri App"
authors = ["you"]
license = "CC BY-NC"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "shell-sidecar", "system-tray", "dialog-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.7"
libsqlite3-sys = { version = "^0", features = ["bundled"] } # DO NOT REMOVE, IF REMOVED BREAKS RUSQLITE
rusqlite = "0.29.0"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.22.0"
thiserror = "1.0.26"
maplit = "1.0"
ndarray = "0.15.6"
argmin = "0.8.1"
# pyo3 = {version= "0.19", features= ["extension-module"] }
byteorder = "1.4.3"
chemcore = "0.4"
rayon = "1.7.0"
log = "0.4"
dirs = "5.0.1"
once_cell = "1.9"
regex = "1.10.2"
nlopt = "0.6.0"
imzml = "0.1.3"
flate2 = "1.0.28"
base64 = "0.21.5"
bincode = "1.3.3"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
