[package]
name = "Met-ID"
version = "0.5.8"
description = "A Tauri App"
authors = ["you"]
license = "CC BY-NC"
repository = ""
edition = "2021"

[lib]
name="app_lib"
crate-type= ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "*"
prost-build = "0.11"
protoc-grpcio = "3.0"

[dependencies]
tauri = { version = "2.4.1", features = ["tray-icon"] }
serde = { version = "1.0.219", features = ["derive"] }
tauri-plugin-dialog = "2.2.1-rc.0"
tauri-plugin-fs = "2.2.1"
tauri-plugin = "2.2.0"
serde_json = "1.0.140"
csv = "1.3.1"
libsqlite3-sys = { version = "0.32.0", features = ["bundled"] } # DO NOT REMOVE, IF REMOVED BREAKS RUSQLITE
rusqlite = "0.34.0"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.27.0"
thiserror = "2.0.12"
maplit = "1.0"
ndarray = "0.16.1"
argmin = "0.10.0"
# pyo3 = {version= "0.19", features= ["extension-module"] }
byteorder = "1.4.3"
#chemcore = "0.4"
rayon = "1.7.0"
log = "0.4.27"
dirs = "6.0.0"
once_cell = "1.21.3"
regex = "1.11.1"
nlopt = "0.8.1"
imzml = "0.1.3"
flate2 = "1.1.1"
base64 = "0.22.1"
bincode = "2.0.1"
fuzzy-matcher = "0.3"
tauri-plugin-shell = "2.2.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
protobuf = "3.7.1"
prost = "0.13"
uuid = "1.17.0"

# rdkit = { path = "C:/Users/patbj751/Documents/GitHub/rdkit-rust-fork" }

[target.'cfg(target_os="macos")'.dependencies]
rdkit = "0.4.11"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
